--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "$": "link:./src",
     "next": "^13.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/eslint": "^8",
     "@types/node": "18.14.0",
     "@types/prettier": "^2",
     "@types/react": "^18.0.28",
+    "@types/styled-components": "^5",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.34.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
