chore: add svg webpack loader

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@svgr/webpack": "^6.5.1",
     "@types/babel__core": "^7",
     "@types/eslint": "^8",
     "@types/node": "18.14.0",
@@ -58,6 +59,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.10",
     "lint-staged": "^13.1.2",
+    "next-images": "^1.8.4",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   }
