--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "dependencies": {
     "$": "link:./src",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@emotion/unitless": "^0.8.0",
+    "@mui/material": "^5.11.10",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
